Old skool simple JS button to increment a counter.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1,2 +1,27 @@
 /* some style */
 
+html {
+    font-family : sans;
+}
+
+body {
+    background-color : #efe;
+}
+
+.button {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 150%;
+  margin: 2em;
+  cursor: pointer;
+}
+
+#the-text {
+ font-size: 150%;
+ color: blue;
+}
