--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -25,3 +25,82 @@ body {
  font-size: 150%;
  color: blue;
 }
+
+.textInput {
+  border: none;
+  background-color: none;
+  outline: 0;
+  font-size: 25px;
+  width: 300px;
+  height: 30px;
+}
+
+::placeholder {
+  color: #e0e0eb;
+}
+
+.textInput:focus {
+  border: none;
+  background-color: none;
+  outline: 0;
+  width: 300px;
+  height: 30px;
+}
+
+.letterButton {
+	box-shadow:inset 0px 10px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:2px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:10px 10px;
+        margin:10px 10px;
+	text-decoration:none;
+	text-shadow:0px 5px 0px #ffffff;
+}
+.letterButton:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.letterButton:active {
+	position:relative;
+	top:1px;
+}
+.letterButton:focus {outline:0;}
+
+.centerButton {
+        color:orange;
+}
+
+.actionButton {
+	box-shadow:inset 0px 10px 0px 0px #ffffff;
+	background:linear-gradient(to bottom, #ffffff 5%, #f6f6f6 100%);
+	background-color:#ffffff;
+	border-radius:18px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#666666;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:10px 10px;
+        margin:5px 5px;
+	text-decoration:none;
+	text-shadow:0px 5px 0px #ffffff;
+}
+.actionButton:hover {
+	background:linear-gradient(to bottom, #f6f6f6 5%, #ffffff 100%);
+	background-color:#f6f6f6;
+}
+.actionButton:active {
+	position:relative;
+	top:1px;
+}
+.actionButton:focus {outline:0;}
